--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.8.0",
     "jest": "^18.1.0",
-    "react": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "mocha": "^3.2.0"
   },
   "peerDependencies": {
     "react": ">= 0.11.2 < 16.0.0"
@@ -72,8 +71,6 @@
     "test"
   ],
   "dependencies": {
-    "mocha": "^3.2.0",
-    "react-router": "^4.0.0",
-    "react-test-render": "^1.0.3"
+    "react": "^15.4.1"
   }
 }
