--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-react": "^6.10.3",
     "jest": "^18.1.0",
+    "mocha": "^3.2.0",
     "react-dom": "^15.4.1",
-    "rimraf": "^2.5.4",
-    "mocha": "^3.2.0"
+    "rimraf": "^2.5.4"
   },
   "peerDependencies": {
     "react": ">= 0.11.2 < 16.0.0"
